fix: content shifting

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,6 +24,10 @@ html, body {
 	min-height: 100vh;
 }
 
+#content {
+	min-height: 60vh;
+}
+
 body{
 	padding: 0;
 	margin: 0;
